# SoftPhone

./: CHANGELOG.txt  CMakeLists.txt  MetaVoIP.cpp  MetaVoIP.h  MetaVoIP.pro  MyAccount.cpp  MyAccount.h  MyCall.cpp  MyCall.h  README.txt  generator.cpp  generator.h  images.qrc  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  sounds.qrc
QML/: PhoneButton.qml  PhoneKeyboard.qml  ToolBar.qml  keyboarditem.cpp  keyboarditem.h  toolbar.cpp  toolbar.h
QML/ToolBar/: ToolBar.qml  ToolBarMenuButton.qml  toolbar.cpp
android/: AndroidManifest.xml
android/res/drawable-hdpi/: Thumbs.db
